Backend variables de entorno-bd mongodb-atlas Frontend G15-G2

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 /backendMongoG15-G2.zip
 /proyectog15-g2.zip
+/backendMongoG15-G2/.env
+/backendMongoG15-G2 (2).zip
+/proyectog15-g2 (2).zip
+/backendMongoG15-G2/node_modules
+/proyectog15-g2/.env
+/proyectog15-g2/node_modules
